Fix code incompatible with java 20